feat(common)：优化整体架构，改为全量逻辑变种，固定注册载体。